results/SVCOMP/specgen/log-Array2-2024_02_23_22_28_31.txt
public class Array2 {
    //@ ensures \result ==> unknown > 0 ==> arr.length == 1 && arr[0] == 1;
    //@ ensures \result ==> unknown <= 0 ==> arr.length == 0;
    public static boolean func(int unknown) {
        int[] arr;
        if (unknown > 0)
            arr = new int[1];
        else
            arr = new int[0];

        if (unknown > 0)
            arr[0] = 1;

        if (unknown > 0)
            return arr.length == 1 && arr[0] == 1;
        else
            return arr.length == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/Array2.java:2: error: cannot find symbol
    //@ ensures \result ==> unknown > 0 ==> arr.length == 1 && arr[0] == 1;
                                            ^
  symbol:   variable arr
  location: class Array2
/home/max/Documents/JMLGPT/tmp/Array2.java:2: error: cannot find symbol
    //@ ensures \result ==> unknown > 0 ==> arr.length == 1 && arr[0] == 1;
                                                               ^
  symbol:   variable arr
  location: class Array2
/home/max/Documents/JMLGPT/tmp/Array2.java:3: error: cannot find symbol
    //@ ensures \result ==> unknown <= 0 ==> arr.length == 0;
                                             ^
  symbol:   variable arr
  location: class Array2
3 errors

public class Array2 {
    //@ ensures \result ==> unknown > 0 ==> (\exists int[] arr; arr != null && arr.length == 1 && arr[0] == 1);
    //@ ensures \result ==> unknown <= 0 ==> (\exists int[] arr; arr != null && arr.length == 0);
    public static boolean func(int unknown) {
        int[] arr;
        if (unknown > 0)
            arr = new int[1];
        else
            arr = new int[0];

        if (unknown > 0)
            arr[0] = 1;

        if (unknown > 0)
            return arr.length == 1 && arr[0] == 1;
        else
            return arr.length == 0;
    }
}

